[package]
name = "seldom_pixel"
version = "0.6.1"
edition = "2021"
categories = ["game-development"]
description = "Bevy plugin for limited color palette pixel art games"
exclude = ["assets/"]
keywords = ["gamedev", "bevy", "graphics", "gui", "2d"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Seldom-SE/seldom_pixel"

[features]
line = ["dep:line_drawing"]
nav = ["dep:seldom_map_nav"]
particle = ["dep:bevy_turborand"]
state = ["dep:seldom_state"]

[dependencies]
bevy_turborand = { version = "0.8.1", optional = true }
line_drawing = { version = "1.0", optional = true }
seldom_map_nav = { git = "https://github.com/Seldom-SE/seldom_map_nav", rev = "bfa6889", optional = true }
seldom_pixel_macros = { version = "0.1.0", path = "macros" }
seldom_state = { git = "https://github.com/Seldom-SE/seldom_state", rev = "d0abfd8", optional = true }

[dependencies.bevy]
version = "0.14.0-rc.2"
default-features = false
features = ["bevy_asset", "bevy_core_pipeline", "bevy_render", "bevy_sprite"]

[dev-dependencies]
bevy = { version = "0.14.0-rc.2", features = ["png"] }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", rev = "a603533" }
rand = "0.8.5"
seldom_state = { git = "https://github.com/Seldom-SE/seldom_state", rev = "d0abfd8", features = [
    "leafwing_input",
] }

[[example]]
name = "line"
required-features = ["line"]

[[example]]
name = "particles"
required-features = ["particle"]

[[example]]
name = "state"
required-features = ["state"]

[package.metadata.docs.rs]
all-features = true
