[package]
name = "seldom_pixel"
version = "0.9.0-dev"
edition = "2021"
categories = ["game-development"]
description = "Bevy plugin for limited color palette pixel art games"
exclude = ["assets/"]
keywords = ["gamedev", "bevy", "graphics", "gui", "2d"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Seldom-SE/seldom_pixel"

[features]
line = ["dep:line_drawing"]
nav = ["dep:seldom_map_nav"]
particle = ["dep:bevy_turborand"]
state = ["dep:seldom_state"]

[dependencies]
next = "0.1.0"
anyhow = "1.0"
event-listener = "5.3"
serde = "1.0"
line_drawing = { version = "1.0", optional = true }
seldom_singleton = "0.3.0"
bevy_turborand = { version = "0.10.0", optional = true }
seldom_map_nav = { version = "0.8.0", optional = true }
seldom_pixel_macros = { version = "0.3.0-dev", path = "macros" }
seldom_state = { version = "0.12.0", optional = true }

[dependencies.bevy_internal]
version = "0.15.0"
default-features = false
features = ["bevy_image"]

[dependencies.bevy]
version = "0.15.0"
default-features = false
features = [
    "bevy_asset",
    "bevy_window",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
]

[dev-dependencies]
bevy = "0.15.0"
leafwing-input-manager = "0.16.0"
rand = "0.8.5"
seldom_state = { version = "0.12.0", features = ["leafwing_input"] }

[[example]]
name = "line"
required-features = ["line"]

[[example]]
name = "particles"
required-features = ["particle"]

[[example]]
name = "state"
required-features = ["state"]

[package.metadata.docs.rs]
all-features = true
