[package]
name = "seldom_pixel"
version = "0.9.0-dev"
edition = "2024"
categories = ["game-development"]
description = "Bevy plugin for limited color palette pixel art games"
exclude = ["assets/"]
keywords = ["gamedev", "bevy", "graphics", "gui", "2d"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Seldom-SE/seldom_pixel"

[features]
line = ["dep:line_drawing"]
nav = ["dep:seldom_map_nav"]
particle = ["dep:bevy_turborand"]
state = ["dep:seldom_state"]

[dependencies]
next = "0.2.0"
event-listener = "5.3"
serde = "1.0"
line_drawing = { version = "1.0", optional = true }
bevy_utils = { version = "0.17.1", default-features = false }
bevy_math = { version = "0.17.1", default-features = false }
bevy_transform = { version = "0.17.1", default-features = false }
bevy_color = { version = "0.17.1", default-features = false }
bevy_platform = { version = "0.17.1", default-features = false }
bevy_image = { version = "0.17.1", default-features = false }
bevy_log = { version = "0.17.1", default-features = false }
bevy_derive = { version = "0.17.1", default-features = false }
bevy_app = { version = "0.17.1", default-features = false }
bevy_ecs = { version = "0.17.1", default-features = false }
bevy_time = { version = "0.17.1", default-features = false }
bevy_asset = { version = "0.17.1", default-features = false }
bevy_reflect = { version = "0.17.1", default-features = false }
bevy_input = { version = "0.17.1", default-features = false }
bevy_window = { version = "0.17.1", default-features = false }
bevy_render = { version = "0.17.1", default-features = false }
bevy_camera = { version = "0.17.1", default-features = false }
bevy_shader = { version = "0.17.1", default-features = false }
bevy_core_pipeline = { version = "0.17.1", default-features = false }
bevy_picking = { version = "0.17.1", default-features = false }
bevy_input_focus = { version = "0.17.1", default-features = false }
bevy_turborand = { version = "0.11.0", optional = true }
seldom_map_nav = { version = "0.9.0", optional = true }
seldom_pixel_macros = { version = "0.3.0-dev", path = "macros" }
seldom_state = { version = "0.14.0", optional = true }

[dev-dependencies]
bevy = "0.17.1"
leafwing-input-manager = "0.17.0"
rand = "0.8.5"
seldom_state = { version = "0.14.0", features = ["leafwing_input"] }

[[example]]
name = "line"
required-features = ["line"]

[[example]]
name = "particles"
required-features = ["particle"]

[[example]]
name = "state"
required-features = ["state"]

[package.metadata.docs.rs]
all-features = true
